# OmniParser

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  api.py  app.py  client.html  client.py  data_generation.py  demo.ipynb  demo.ipynb.bak  deploy.py  deploy_multiple.py  deploy_requirements.txt  docker-build-ec2.yml.j2  download.py  downloadModel.py  endpoint.py  entrypoint.sh  fastapi_server.py  fork.txt  gradio_demo.py  gradio_demo_modal.py  index.html  install_weights_windows.ps1  main.py  modal_app.py  omniparser.py  omniparser.py.bak  pyproject.toml  requirement.txt  requirements.txt  requirements_cuda.txt  setup.py  setup.sh  utils.py  weights_download.ps1  weights_install.py
.github/workflows/: docker-build-ec2.yml
computer_use_demo/: readme.md
computer_use_demo/gradio/: app.py  loop.py
computer_use_demo/gradio/agent/: anthropic_agent.py  vlm_agent.py
computer_use_demo/gradio/tools/: computer.py
computer_use_demo/omniparserserver/: omniparserserver.py
computer_use_demo/windowshost/scripts/: manage_vm.ps1
demo/: app.py  loop.py  remote_request.py
demo/executor/: anthropic_executor.py
demo/gradio/: app.py  fast_api_demo.py
demo/gradio/computer_use_demo/: colorful_text.py  loop.py
demo/gui_agent/: anthropic_agent.py
demo/gui_agent/llm_utils/: llm_utils.py  oai.py  qwen.py  run_llm.py
demo/omniparser_agent/: vlm_agent.py
demo/omniparserserver/: omniparser.py  remote_request.py
demo/tools/: __init__.py  base.py  bash.py  collection.py  colorful_text.py  computer.py  edit.py  run.py  screen_capture.py
docs/: Evaluation.md  README_CN.md  README_FR.md  README_JA.md
eval/: logs_sspro_omniv2.json  ss_pro_gpt4o_omniv2.py
omniparser/: omniparser.py  utils.py
omniparser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
omnitool/: readme.md
omnitool/gradio/: app.py  app_new.py  app_streamlit.py  loop.py
omnitool/gradio/agent/: anthropic_agent.py  vlm_agent.py  vlm_agent_with_orchestrator.py
omnitool/gradio/executor/: anthropic_executor.py
omnitool/gradio/tools/: __init__.py  base.py  computer.py  screen_capture.py
omnitool/omnibox/: .gitignore  Dockerfile  Dockerfile.linux  compose.linux.yml  compose.yml
omnitool/omniparserserver/: omniparserserver.py
scripts/: test_api_server.py
util/: action_matching.py  action_type.py  omniparser.py  paddle_ocr_pool.py  utils.py
weights/: convert_safetensor_to_pt.py
(+76 files in other folders)
